--- a/study/linalg4/main.tex
+++ b/study/linalg4/main.tex
@@ -363,14 +363,26 @@
     Then $\deg f_1(h) = d_1 h$.
 \end{frame}
 
-
-
 \subsection{Lagrange Interpolation}
+
+\begingroup
+    \setbeamertemplate{frametitle}{%
+    \vskip1ex
+    \usebeamerfont{frametitle}%
+    \insertframetitle\par        %  ← 원하는 대로 변경 가능
+    \vskip1ex
+    \hrule                             % 밑줄(선택)
+    }
+    \begin{frame}
+        \frametitle{Table of Contents}
+        \tableofcontents[currentsubsection]
+    \end{frame}
+\endgroup
 
 \begin{frame}{.}
     Throughtout this section we shall assume $F$ is a fixed and $t_0, t_1, \dots, t_n$ are $n +1$ \underline{distinct} elements of $F$.
     Let $V$ be the subspace of $F[x]$ consisting of all polynomials of degree less than or equal to $n$ (together with the $0$-polynomial), and let $L_i$ be the function from $V$ into $F$ defined for $f$ in $V$ by
-    \[L_i(f) = f(t_i), 0 \quad \leq i \leq n\]
+    \[L_i(f) = f(t_i), 0 \quad 1 \leq i \leq n\]
 
     We know that $L_i$ is linear functional on $V$, and one of the things we intend to show is that the set consisting of $L_0, L_1, \dots, L_n$ is a basis for $V^\ast$, the dual space of $V$.
 
@@ -399,29 +411,136 @@
     This matrix is called \tb{Vandermonde matrix}.
 
     \bigskip
-    If $f$ is any polynomial over $F$ we shall, in our present discussion, denote by $\tilde{f}$ the polynomial function from $F$ into $F$ taking each $t$ in $F$ into $f(t)$.
+    If $f$ is any polynomial over $F$ we shall, in our present discussion, denote by ${f}^\sim$ the polynomial function from $F$ into $F$ taking each $t$ in $F$ into $f(t)$.
     By definition every polynomial function arises in this way;
-    However it may happen that $\tilde{f} = \tilde{g}$ for two polynomials $f$ and $g$ such that $f \neq g$.
+    However it may happen that ${f}^\sim = {g}^\sim$ for two polynomials $f$ and $g$ such that $f \neq g$.
     Fortunately, as we shall see, this unpleasant situation only occurs in the case where $F$ is a field having only a finite number of distinct elements.
     In order to describe in a precise way the relation between polynomials and polynomial functions, we need to define the product of two polynomial functions.
-    If $f$ and $g$ are polynomials over $F$, the product of $\tilde{f}$ and $\tilde{g}$ is the function $\tilde{f}\tilde{g}$ from $F$ into $F$ given by 
+    If $f$ and $g$ are polynomials over $F$, the product of ${f}^\sim$ and ${g}^\sim$ is the function ${f}^\sim {g}^\sim$ from $F$ into $F$ given by 
     \begin{equation}
     \label{eq:1}
-        (\tilde{f}\tilde{g})(t) = \tilde{f}(t) \tilde{g}(t), t \in F
+        ({f}^\sim{g}^\sim)(t) = {f}^\sim(t) {g}^\sim(t), t \in F
     \end{equation}
-    So, $(fg)(t) = f(t)g(t)$ and hence $\tilde{(fg)}(t) = \tilde{f}(t) \tilde{g}(t)$ for each $t$ in $F$.
-    Thus $\tilde{f}\tilde{g} = \tilde{(fg)}$, and is a polynomial function.
+    So, $(fg)(t) = f(t)g(t)$ and hence ${(fg)}^\sim(t) = {f}^\sim(t) {g}^\sim(t)$ for each $t$ in $F$.
+    Thus ${f}^\sim{g}^\sim = {(fg)}^\sim$, and is a polynomial function.
     At this point it is a straightforward matter, which we leave to the reader, to verify that the vector space of polynomial functions over $F$ becomes a linear algebra with identity over $F$ if multiplication is defined by equation \ref{eq:1}.
 \end{frame}
 
 \begin{frame}{.}
     \begin{definition}
-        Let $F$ be a field and let $\mc{A}$ and $\tilde{\mc{A}}$ be a linear algebras over $F$.
+        Let $F$ be a field and let $\mc{A}$ and ${\mc{A}}^\sim$ be a linear algebras over $F$.
         The algebras $\mc{A}$ and $\mc{A}^\sim$ are said to be \tb{isomorphic} if there is a one-to-one mapping $\alpha \to \alpha^\sim$ of $\mc{A}$ onto $\mc{A}^\sim$ such that
         \begin{enumerate}
-            \item ${(c\alpha + d \beta)}^\sim = c \tilde{\alpha} + d \tilde{\beta}$
+            \item ${(c\alpha + d \beta)}^\sim = c {\alpha}^\sim + d {\beta}^\sim$
+            \item $(\alpha \beta)^\sim = \alpha^\sim \beta^\sim$
         \end{enumerate}
+        for all $\alpha, \beta \in \mc{A}$ and all scalars $c, d$ in $F$. the mapping $\alpha \to \alpha^\sim$ is called an \tb{isomorphism} of $\mc{A}$ onto $\mc{A}^\sim$.
+        An isomorphism of $\mc{A}$ onto $\mc{A}^\sim$ is thus a vector space isomorphism of $\mc{A}$ onto $\mc{A}^\sim$ which has the additional property (2.) of \ti{preserving} products.
     \end{definition}
+
+    \begin{example}
+        Let $V$ be an $n$-dimensional vector space over the field $F$.
+        Each ordered basis $\mc{B}$ of $V$ determines an isomorphism $T \to [T]_{\mc{B}}$ of the algebra of linear operators on $V$ onto the algebra of $n \times n$ matrices over $F$.
+        Suppose now that $U$ is a fixed linear operator on $V$ and that we are given a polynomial
+        $f = \sum_{i=0}^n c_i x^i$ with coefficients $c_i$ in $F$.
+        Then $f(U) = \sum_{i=0}^n c_i U^i$ and since $T \to [T]_{\mc{B}}$ is a linear mapping, $[f(U)]_{\mc{B}} = \sum_{i=0}^n c_i [U^i]_{\mc{B}}$.
+
+        Now from the additional fact that $[T_1 T_2]_{\mc{B}} = [T_1]_{\mc{B}}[T_2]_{\mc{B}}$ for all $T_1, T_2$ in $L(V,V)$ it follows that $[U^i]_{\mc{B}} = ([U]_{\mc{B}})^i, \forall 2\leq i \leq n$.
+        As this relation is also valid for $i=0,1$ we obtain the result that $[f(U)]_{\mc{B}} = f([U]_{\mc{B}})$.
+
+        In other words, if $U$ is a linear operator on $V$, the matrix of a polynomial in $U$, in a given basis, is the same polynomial in the matrix of $U$.
+    \end{example}
 \end{frame}
+
+\begin{frame}{.}
+    \begin{theorem}
+        If $F$ is a field containing an infinite number of distinct elements, the mapping $f \to f^\sim$ is an isomorphism of the algebra of polynomials over $F$ onto the algebra of polynoial functions over $F$.
+    \end{theorem}
+    \ti{Proof.}
+    By definition, the mapping is onto (surjective), and if $f, g$ belong to $F[x]$ it is evident that $(cf + dg)^\sim =  df^\sim + dg^\sim$ for all scalars $c$ and $d$.
+    Since we have already shown that $(fg)^\sim = f^\sim g^\sim$, we need only show that the mapping is one-to-one.
+
+    Let me show that $f^\sim = 0 \implies f = 0$.
+    Suppose then that $f$ is a polynomial of degree $n$ or less such that $f^\prime = 0$.
+    Let $t_0, t_1, \dots, t_n$ be any $n +1$ distinct elements of $F$.
+    Since $f^\sim = 0, f(t_i) = 0$ for $i=0, 1, \dots, n$, and it is an immediate consequence that $f=0$.
+\end{frame}
+
+\begin{frame}{.}
+    \begin{block}{Exercise 4.3.1}
+        Use the Lagrange interpolation formula to find a polynomial $f$ with real coefficients such that $f$ has degree $\leq 3$ and $f(-1) = -6, f(0) = 2,f(1) = -2, f(2) = 6$.
+
+        \smallskip
+        Let $t_0 =-1, t_1= 0, t_2 = 1, t_3 = 2$ and $P_0 = \frac{x (x-1) (x-2)}{(-1)(-2)(-3)}, P_1 = \frac{(x+1)(x-1)(x-2)}{(-1) (-2)}, P_2 = \frac{(x+1)x (x-2)}{(2)(1)(-1)}, P_3 = \frac{(x+1)x(x-1)}{(3)(2)(1)}$.
+        Thus $f = f(-1) P_0 + f(0) P_1 + f(1) P_2 + f(2)P_3 = -6P_0 + 2P_1 -2 P_2 + 6 P_3 = 4x^3 - 6x^2 - 2x +2$.
+    \end{block}
+\end{frame}
+
+\begin{frame}{.}
+    \begin{block}{Exercise 4.3.3}
+        Let $F$ be the field of real numbers 
+        \[
+            \begin{gathered}
+                A = \begin{bmatrix}
+                    2 & 0 & 0 & 0 \\ 0 & 2 & 0 & 0 \\ 0 & 0 & 3 & 0 \\ 0 & 0 & 0 & 1
+                \end{bmatrix} \\
+                p = (x-2)(x-3)(x-1)
+            \end{gathered}
+        \]
+        \begin{enumerate}
+            \item Show that $p(A) = 0$.
+            \item Let $P_1, P_2, P_3$ be the Lagrange polynomials for $t_1 =2, t_2 = 3, t_3 = 1$.
+            Compute $E_i = P_i(A), i=1,2,3$.
+            \item Show that $E_1 + E_2 + E_3 = I$, $i\neq j \implies E_i E_j = 0$, $E_i^2 = E_i$.
+            \item Show that $A = 2E_1 + 3E_2 + E_3$.
+        \end{enumerate}
+    \end{block}
+
+    (1.) $(A-2)(A-3)(A-1) = \begin{bmatrix}
+        0 & 0 & 0 & 0 \\ 0 & 0 & 0 & 0 \\ 0 & 0 & 1 & 0 \\ 0 & 0 & 0 & -1
+    \end{bmatrix} \begin{bmatrix}
+        -1 &0 & 0 & 0 \\ 0 & -1 & 0 & 0 \\ 0 & 0 & 0 & 0 \\ 0 & 0 & 0 & -2
+    \end{bmatrix} \begin{bmatrix}
+    1 & 0 & 0 & 0 \\ 0 & 1 & 0 & 0 \\ 0 & 0 & 2 & 0 \\ 0 & 0 & 0 & 0
+    \end{bmatrix} = 0$.
+\end{frame}
+
+\begin{frame}{.}
+    (2.) $P_1 = \frac{(x-3)(x-1)}{(-1)(1)}, P_2 = \frac{(x-2)(x-1)}{(1)(2)}, P_3 = \frac{(x-2)(x-3)}{(-1)(-2)}$.
+    $E_1 = \frac{(A-3)(A-1)}{(-1)(1)} = -\begin{bmatrix}
+    -1 & 0 & 0 & 0\\ 0 & -1 & 0 & 0 \\ 0 & 0 & 0 & 0 \\ 0 & 0 & 0 & 0
+    \end{bmatrix} = \begin{bmatrix}
+        1 & 0 & 0 & 0 \\ 0 & 1 & 0 & 0 \\ 0 & 0 & 0 & 0 \\ 0 & 0 & 0 & 0
+    \end{bmatrix}, E_2 = 1/2 \begin{bmatrix}
+       0 & 0 & 0 & 0 \\ 0 & 0 & 0 & 0 \\ 0 & 0 & 2 & 0  \\ 0 & 0 & 0 & 0
+    \end{bmatrix} = \begin{bmatrix}
+    0 & 0 & 0 & 0  \\ 0 & 0 & 0 & 0 \\ 0 & 0 & 1 & 0 \\ 0 & 0 & 0 & 0
+    \end{bmatrix}, E_3 = \begin{bmatrix}
+   0 & 0 & 0 &0 \\0 & 0 & 0 & 0 \\ 0 & 0 & 0 & 0\\ 0 & 0 & 0 & 1
+    \end{bmatrix}$
+
+    (3.) Trivial. Skip.
+    (4.) Trivial. Skip.
+\end{frame}
+
+\begin{frame}{.}
+    \begin{block}{Exercise 4.3.4 $\star$}
+        Let $p = (x-2)(x-3)(x-1)$ and let $T$ be any linear operator on $R^4$ such that $p(T)=0$.
+        Let $P_1, P_2, P_3$ be the Lagrange polynomials of Exercise $3$, and let $E_i = P_i(T), i=1,2,3$.
+        Prove that $E_1 + E_2 + E_3 =I$, $i\neq j \implies E_i E_j = 0$, $E^2_i = E_i$ and $T = 2E_1 + 3E_2 + E_3$.
+    \end{block}
+
+    By definition, for any polynomial $p, q$, $p(T) + q(T) = (p+q)(T)$ and $p(T)q(T) = (pq)(T)$.
+    Since $P_1 + P_2 + P_3 = 1$, $E_1 + E_2 + E_3 = P_1(T) + P_2(T) + P_3(T) = (P_1+P_2+P_3)(T) = I$.
+
+    Note that $p$ divides $P_i P_j$ whenever $i \neq j$.
+    So for $i, j, i\neq j$, $\exists q$ such that $P_i P_j = pq$.
+    Thus, $E_i E_j = P_i(T) P_j(T) = p(T) q(T)$ for some $q$ and $p(T) q(T) = 0 q(T) = 0$.
+
+    We know that $(T-2)(T-3)(T-1) = 0$.
+    $E_1 = P_1(T) = -(T-3)(T-1)$.
+\end{frame}
+
+
 
 \end{document}
